Update: style- * on narrow screens (<900px), use 2 columns in `.assets` to prevent Pathos pips from escaping sheet border * when editing, set `.pips` margin-left to 0 to prevent control buttons from being pushed to lower line * tweak margins and alignment for all pip bars on `.help` page

--- a/style/theme.css
+++ b/style/theme.css
@@ -155,6 +155,12 @@
 	grid-template-columns: 1fr 1fr 1fr;
 }
 
+@media screen and (max-width:900px) {
+	.mll_sheet .page.stats > section.assets {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+
 .mll_sheet .page.bio > .associates .udf label.type {
 	min-width: 4em;
 	background-color: #DDD;
@@ -653,6 +659,10 @@
 	font-size: 80%;
 }
 
+.editable .mll_sheet .abilities .pips {
+	margin-left: 0;
+}
+
 .editable .mll_sheet .dsf.custedit textarea {
 	min-height: 5em;
 	/* width: 90%; */
@@ -716,9 +726,9 @@
 	margin-left: 2px;
 }
 
-.mll_sheet .help .pips.health {
+.mll_sheet .help .pips {
 	white-space: normal;
-	vertical-align: middle;
+	vertical-align: top;
 	margin-left: 0;
 }
 
